automatically backed up by learn

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,3 @@
-<a href="url"><%= Click Here To List A Puppy %></a>
+<!-- <a href="url"><%= Click Here To List A Puppy %></a> -->
+
+<p>Click Here To List A Puppy<p>
