--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,3 @@
-<!-- <a href="url"><%= Click Here To List A Puppy %></a> -->
+<h1> Welcome to the puppy adoption site!</h1>
 
-<p>Click Here To List A Puppy</p>
+<a href="/new">Click Here To List A Puppy</a>
