--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -1,2 +1,5 @@
 <form method="POST" action="/form">
-     <p>Team Name: <input type="text" name="name"></p>
+     <p>Name: <input type="text" name="name"></p>
+      <p>Breed: <input type="text" name="breed"></p>
+       <p>Age: <input type="text" name="age"></p>
+     </form>
