--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -1,4 +1,4 @@
-<form method="POST" action="/display_puppy">
+<form method="POST" action="/form">
      <p>Name: <input type="text" name="name"></p>
       <p>Breed: <input type="text" name="breed"></p>
        <p>Age: <input type="text" name="age"></p>
