automatically backed up by learn

--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -1,6 +1,8 @@
-<form method="POST" action="/form">
+<body>
+  <form method="POST" action="/form">
      <p>Name: <input type="text" name="name"></p>
       <p>Breed: <input type="text" name="breed"></p>
        <p>Age: <input type="text" name="age"></p>
        <input type="submit" value="Submit">
      </form>
+   </body>
