--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -1,8 +1,6 @@
-<body>
-  <form method="POST" action="/form">
+<form method="POST" action="/form">
      <p>Name: <input type="text" name="name"></p>
       <p>Breed: <input type="text" name="breed"></p>
        <p>Age: <input type="text" name="age"></p>
-       <input type="submit" value="Submit">
+       <input type="submit" value="submit">
      </form>
-   </body>
